Changed the styles for percentage text

--- a/ProgressBarSample/Style/ProgressBar.css
+++ b/ProgressBarSample/Style/ProgressBar.css
@@ -22,9 +22,10 @@
             }
 
         .ProgressBar .mainDiv .innerText {
-            float: right;
+            float: left;
 			height: 50px;
 			width: 10%;
+			margin-left: 5px;
         }
 
     .ProgressBar .controls {
