--- a/ProgressBarSample/Style/ProgressBar.css
+++ b/ProgressBarSample/Style/ProgressBar.css
@@ -1,45 +1,29 @@
-﻿.ProgressBar {
-    margin-left: 25%;
-    margin-right: 25%;
-}
-
-    .ProgressBar .mainDiv {
+/*  ProgressBar.scss */
+.ProgressBar {
+  margin-left: 25%;
+  margin-right: 25%; }
+  .ProgressBar .mainDiv {
+    height: 50px;
+    width: 80%; }
+    .ProgressBar .mainDiv .outerDiv {
+      height: 50px;
+      float: left;
+      width: 85%;
+      border: 1px solid #9ae8f3;
+      margin-bottom: 10px; }
+      .ProgressBar .mainDiv .outerDiv .innerDiv {
         height: 50px;
-        width: 80%;
-    }
-
-        .ProgressBar .mainDiv .outerDiv {
-            height: 50px;
-            width: 85%;
-            border: 1px solid #9AE8F3;
-            margin-bottom: 10px;
-            float: left;
-        }
-
-            .ProgressBar .mainDiv .outerDiv .innerDiv {
-                height: 50px;
-                width: 0;
-            }
-
-        .ProgressBar .mainDiv .innerText {
-            float: left;
-			height: 50px;
-			width: 10%;
-			margin-left: 5px;
-        }
-
-    .ProgressBar .controls {
-        display: inline-block;
-    }
+        width: 0; }
+    .ProgressBar .mainDiv .innerText {
+      height: 50px;
+      float: left;
+      width: 10%;
+      margin-left: 5px; }
+  .ProgressBar .controls {
+    display: inline-block; }
 
 .backGroundColorBlue {
-    background-color: #AFD7E6;
-}
+  background-color: #afd7e6; }
 
 .backGroundColorRed {
-    background-color: red;
-}
-
-.backGroundColorTransparent {
-    background-color: transparent;
-}
+  background-color: red; }
